--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 
     <div id="one">
 
-    <script src="JS/blog.js" type="text/javascript"></script>
+    <script src="JS/Blog.js" type="text/javascript"></script>
 
 
     <footer id="footer">
