--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </style>
 
     <link rel="stylesheet" href="CSS/about.css">
-    <link rel="stylesheet" href="CSS/test.css">
+    
 
 </head>
 
@@ -70,7 +70,35 @@
 
     </header>
 
-<div id="one"></div>
+    <div id="one"></div>
+
+    <section class="carou">
+
+        <div class="slider">
+
+            <div class="slides">
+
+                <img id="lastclone" src="Images/b4.png" alt="NYC">
+                <img id="m1" src="Images/b1.png" alt="FN">
+                <img id="m2" src="Images/b2.png" alt="galaxy">
+                <img id="m3" src="Images/b3.jpg" alt="snow">
+                <img id="m4" src="Images/b4.png" alt="NYC">
+                <img id="m1" src="Images/b1.png" alt="FN">
+                <img id="m2" src="Images/b2.png" alt="galaxy">
+                <img id="m3" src="Images/b3.jpg" alt="snow">
+                <img id="m4" src="Images/b4.png" alt="NYC">
+                <img id="firstclone" src="Images/b1.png" alt="FN">
+
+            </div>
+
+        </div>
+
+
+
+
+    </section>
+
+
     <script src="JS/about.js" type="text/javascript"></script>
 
 
