--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
 
             <div class="slides">
 
-                <img id="lastclone" src="Images/6.png" alt="Taj Mahal">
-                <img id="m1" src="Images/1.png" alt="eagle">
-                <img id="m2" src="Images/2.png" alt="elephant">
-                <img id="m3" src="Images/3.png" alt="photo">
-                <img id="m4" src="Images/4.png" alt="WFH">
-                <img id="m5" src="Images/5.png" alt="glasses">
-                <img id="m6" src="Images/6.png" alt="Taj Mahal">
-                <img id="m1" src="Images/1.png" alt="eagle">
-                <img id="m2" src="Images/2.png" alt="elephant">
-                <img id="m3" src="Images/3.png" alt="photo">
-                <img id="m4" src="Images/4.png" alt="WFH">
-                <img id="m5" src="Images/5.png" alt="glasses">
-                <img id="m6" src="Images/6.png" alt="Taj Mahal">
-                <img id="firstclone" src="Images/1.png" alt="eagle">
+                <img id="lastclone" src="Images/a6.png" alt="Taj Mahal">
+                <img id="m1" src="Images/a1.png" alt="eagle">
+                <img id="m2" src="Images/a2.png" alt="elephant">
+                <img id="m3" src="Images/a3.png" alt="photo">
+                <img id="m4" src="Images/a4.png" alt="WFH">
+                <img id="m5" src="Images/a5.png" alt="glasses">
+                <img id="m6" src="Images/a6.png" alt="Taj Mahal">
+                <img id="m1" src="Images/a1.png" alt="eagle">
+                <img id="m2" src="Images/a2.png" alt="elephant">
+                <img id="m3" src="Images/a3.png" alt="photo">
+                <img id="m4" src="Images/a4.png" alt="WFH">
+                <img id="m5" src="Images/a5.png" alt="glasses">
+                <img id="m6" src="Images/a6.png" alt="Taj Mahal">
+                <img id="firstclone" src="Images/a1.png" alt="eagle">
 
             </div>
 
