--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                 </div>
 
             </div>
-            <button class="dropbtn"><img src="Images/test.jpg" id="imga"></button>
+            <button class="dropbtn" onclick="but()"><img src="Images/test.jpg" id="imga"></button>
         </div>
 
 
