--- a/about.html
+++ b/about.html
@@ -23,6 +23,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
     </style>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cantarell&family=Dancing+Script:wght@400;500&family=Oxygen:wght@300&family=Rajdhani&display=swap"
+        rel="stylesheet">
+
+
     <link rel="stylesheet" href="CSS/about.css">
 
 
@@ -69,9 +76,31 @@
 
 
     </header>
-
+    <hr id="horli">
+    <br>
     <div id="one"></div>
-    <!--
+
+    <div id="about">
+        <p id="am">About Me, Beyond Me</p> <br><br>
+        <p id="parag">
+            Hello there! I'm a 19-year-old in college, embracing the new chapter of my life after the<br>
+            challenges of the pandemic. College to me, is an opportunity to <br>
+            reinvent myself, explore new things,and embark on exciting adventures.
+                 
+            <br><br>
+
+            I love exploring new movies and TV shows, playing the piano, and immersing myself in the<br>
+            beautiful world of Fortnite.I'm a huge fan of sci-fi, crime, thriller,<br>
+            and mystery genres, with drama(obviously).
+
+            <br><br>
+
+            Join me on this exciting journey as I share my thoughts, insights and passions.<br>
+            Let's explore the wonderful world in all its glory!
+
+        </p><br><br>
+    </div>
+
     <section class="carou">
 
         <div class="slider">
@@ -95,9 +124,9 @@
 
     </section>
 
--->
-    <script src="JS/about.js" type="text/javascript"></script>
 
+    <script src="JS/about.js" type="text/javascript"></script>
+    <br><br>
 
     <footer id="footer">
         <p id="f1">Beyondme_BTW</p><br>
