--- a/about.html
+++ b/about.html
@@ -10,12 +10,7 @@
 
 
     <script>
-        window.onload = function () {
-            if (!window.location.hash) {
-                window.location = window.location + '#';
-                window.location.reload();
-            }
-        }</script>
+        </script>
 
 
     <link rel="icon" type="image/x-icon" href="Images/logo.ico">
