--- a/about.html
+++ b/about.html
@@ -8,9 +8,18 @@
     <script src="JS/Javasc.js" type="text/javascript"></script>
 
 
-
-    <script>
-        </script>
+    <script type='text/javascript'>
+        (function () {
+            if (window.localStorage) {
+                if (!localStorage.getItem('firstLoad')) {
+                    localStorage['firstLoad'] = true;
+                    window.location.reload();
+                }
+                else
+                    localStorage.removeItem('firstLoad');
+            }
+        })();
+    </script>
 
 
     <link rel="icon" type="image/x-icon" href="Images/logo.ico">
@@ -81,7 +90,7 @@
             Hello there! I'm a 19-year-old in college, embracing the new chapter of my life after the<br>
             challenges of the pandemic. College to me, is an opportunity to <br>
             reinvent myself, explore new things,and embark on exciting adventures.
-                 
+
             <br><br>
 
             I love exploring new movies and TV shows, playing the piano, and immersing myself in the<br>
