--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <script src="JS/Javasc.js" type="text/javascript"></script>
-
-
-
-    <script>
-        
-        </script>
-
-
     <link rel="icon" type="image/x-icon" href="Images/logo.ico">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
@@ -21,7 +12,18 @@
 
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/test.css">
-
+    <script  type='text/javascript'>
+        (function () {
+            if (window.localStorage) {
+                if (!localStorage.getItem('firstLoad')) {
+                    localStorage['firstLoad'] = true;
+                    window.location.reload();
+                }
+                else
+                    localStorage.removeItem('firstLoad');
+            }
+        })();
+    </script>
 </head>
 
 
@@ -146,7 +148,7 @@
 
 
     <script src="JS/test.js" type="text/javascript"></script>
-
+    <script src="JS/Javasc.js" type="text/javascript"></script>
 
     <footer id="footer">
         <p id="f1">Beyondme_BTW</p><br>
