--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     <br><br>
 
     <div id="embedd">
-        <div id="twitem"><a class="twitter-timeline lazyload" data-width="600" data-height="650" data-src="https://twitter.com/pranavisda1"
-                href="https://twitter.com/Pranavisda1?ref_src=twsrc%5Etfw">Tweets by Pranavisda1</a>
+        <div id="twitem"><a class="twitter-timeline lazyload" data-width="600" data-height="650"
+                href="https://twitter.com/Pranavisda1?ref_src=twsrc%5Etfw"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
 
