--- a/about.html
+++ b/about.html
@@ -9,16 +9,12 @@
 
 
     <script type='text/javascript'>
-        (function () {
-            if (window.localStorage) {
-                if (!localStorage.getItem('firstLoad')) {
-                    localStorage['firstLoad'] = true;
-                    window.location.reload();
-                }
-                else
-                    localStorage.removeItem('firstLoad');
+        window.onload = function () {
+            if (!window.location.hash) {
+                window.location = window.location + '#loaded';
+                window.location.reload();
             }
-        })();
+        }
     </script>
 
 
