--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type='text/javascript'>
         window.onload = function () {
             if (!window.location.hash) {
-                window.location = window.location + '#loaded';
+                window.location = window.location + '#';
                 window.location.reload();
             }
         }
@@ -99,15 +99,15 @@
 
 
     <br><br>
-
+    <!--
     <div id="embedd">
         <div id="twitem"><a class="twitter-timeline lazyload" data-width="600" data-height="650"
-                href="https://twitter.com/Pranavisda1?ref_src=twsrc%5Etfw"></a>
+                href="https://fxtwitter.com/Pranavisda1?ref_src=twsrc%5Etfw"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
 
     </div>
-
+-->
 
 
 
