--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/test.css">
-    <script type='text/javascript'>
-        function loa(){
-            location.reload()
-        }
-    </script>
+    
 
 
 </head>
@@ -25,7 +21,7 @@
 
 
 
-<body class="bod" onload="reload()">
+<body class="bod">
 
 
 
