--- a/about.html
+++ b/about.html
@@ -1,46 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>About | BeyondMeBTW</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+    <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
+    such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
-    <script src="JS/Javasc.js" type="text/javascript"></script>
-
-    <link rel="icon" type="image/x-icon" href="Images/logo.ico">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cantarell&family=Dancing+Script:wght@400;500&family=Oxygen:wght@300&family=Philosopher&family=Playfair+Display+SC&family=Poiret+One&family=Rajdhani&family=Space+Mono&display=swap"
+        rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
     </style>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cantarell&family=Dancing+Script:wght@400;500&family=Oxygen:wght@300&family=Rajdhani&display=swap"
-        rel="stylesheet">
-
-
     <link rel="stylesheet" href="CSS/about.css">
+    <link rel="icon" type="image/x-icon" href="Images/logo.ico">
 
+    <script src="JS/Javasc.js" type="text/javascript"></script>
 
 </head>
 
-
-
-
-
 <body class="bod">
-
-
-
-
     <header class="header">
         <p id="beyond">Beyond me</p>
         <div id="hai">
-
             <div class="dropdown">
-
-
-
                 <div id="downdr">
                     <div id="link1">
                         <a class="homehead" href="index.html">Home</a> &#160;&#160;
@@ -58,13 +43,11 @@
                         <button class="twitter" onclick="twit()"><i class="bi bi-twitter"></i></button>
                     </div>
                 </div>
-
             </div>
             <button class="dropbtn" onclick="but()"><img src="Images/test.jpg" id="imga"></button>
         </div>
-
-
     </header>
+
     <hr id="horli">
     <br>
     <div id="one"></div>
@@ -75,27 +58,19 @@
             Hello there! I'm a 19-year-old in college, embracing the new chapter of my life after the<br>
             challenges of the pandemic. College to me, is an opportunity to <br>
             reinvent myself, explore new things,and embark on exciting adventures.
-
             <br><br>
-
             I love exploring new movies and TV shows, playing the piano, and immersing myself in the<br>
             beautiful world of Fortnite.I'm a huge fan of sci-fi, crime, thriller,<br>
             and mystery genres, with drama(obviously).
-
             <br><br>
-
             Join me on this exciting journey as I share my thoughts, insights and passions.<br>
             Let's explore the wonderful world in all its glory!
-
         </p><br><br>
     </div>
 
     <section class="carou">
-
         <div class="slider">
-
             <div class="slides">
-
                 <img id="lastclone" src="Images/b4.png" alt="NYC">
                 <img id="m1" src="Images/b1.png" alt="FN">
                 <img id="m2" src="Images/b2.png" alt="galaxy">
@@ -106,13 +81,9 @@
                 <img id="m3" src="Images/b3.jpg" alt="snow">
                 <img id="m4" src="Images/b4.png" alt="NYC">
                 <img id="firstclone" src="Images/b1.png" alt="FN">
-
             </div>
-
         </div>
-
     </section>
-
 
     <script src="JS/about.js" type="text/javascript"></script>
     <br><br>
@@ -122,8 +93,5 @@
         <p id="f2">&copy2023 by BeyondmeBTW. Proudly created by Pranav Veeraghanta</p>
     </footer>
 
-
-
 </body>
-
 </html>
