--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>About | BeyondMeBTW</title>
+    <title>Blog | BeyondMeBTW</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
