--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <br><br>
     <div id="embedd">
-        <div id="twitem"><a class="twitter-timeline lazyload" data-width="600" data-height="650"
+        <div id="twitem"><a class="twitter-timeline lazyload" data-theme="dark" data-width="600" data-height="650"
                 href="https://twitter.com/Pranavisda1?ref_src=twsrc%5Etfw"></a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
