--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
 
                     <div id="link3">
-                        <a class="bloghead" href="blog.html">Blog</a> &#160;&#160;
+                        <a class="bloghead" href="https://beyondmebtw.wixsite.com/beyond-btw">Blog</a> &#160;&#160;
                     </div>
 
                     <div id="link4">
