--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     </div>
 
                     <div id="link4">
-                        <button class="twitter" onclick="twit()" role="button" aria-label="Name"><i class="bi bi-twitter"></i></button>
+                        <button class="twitter" onclick="twit()" role="button" aria-label="Name" ><i class="bi bi-twitter"></i></button>
                     </div>
                 </div>
             </div>
-            <button class="dropbtn"><img src="Images/test.jpg" id="imga"></button>
+            <button class="dropbtn"><img src="Images/test.jpg" id="imga" alt="welcome image"></button>
         </div>
     </header>
 
