--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                     </div>
 
                     <div id="link4">
-                        <button class="twitter" onclick="twit()"><i class="bi bi-twitter"></i></button>
+                        <button class="twitter" onclick="twit()" role="button" aria-label="Name"><i class="bi bi-twitter"></i></button>
                     </div>
                 </div>
             </div>
