--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     </div>
                 </div>
             </div>
-            <button class="dropbtn"><img src="Images/test.jpg" id="imga" alt="welcome image"></button>
+            <button class="dropbtn"><img src="Images/test.jpg" id="imga" ></button>
         </div>
     </header>
 
-    <img src="Images/onne.png" id="one">
+    <img src="Images/onne.png" id="one" alt="welcome image">
 
     <div id="intro2">
         <p id="nm">Nice to Meet You</p>
