--- a/about.html
+++ b/about.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+    <meta 
+    name="description"
+    content="A personal blog by Pranav Veeraghanta, a college student who is passionate about coding and life.
+    I blog about personal experiences and topics like movies, music and video games">
+    
     <title>About | BeyondMeBTW</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
