--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </header>
 
-    <img src="Images/onne.png" id="one" alt="welcome image">
+    <img src="Images/homepage.png" id="one" alt="welcome image">
 
     <div id="intro2">
         <p id="nm">Nice to Meet You</p>
