--- a/about.html
+++ b/about.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta 
-    name="description"
-    content="A personal blog by Pranav Veeraghanta, a college student who is passionate about coding and life.
+    <meta name="description" content="A personal blog by Pranav Veeraghanta, a college student who is passionate about coding and life.
     I blog about personal experiences and topics like movies, music and video games">
-    
+
     <title>About | BeyondMeBTW</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
     such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
 
@@ -28,11 +26,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QT901JZ6DD"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-QT901JZ6DD');
+    gtag('config', 'G-QT901JZ6DD');
 </script>
 
 <body class="bod">
@@ -52,10 +50,6 @@
                     <div id="link3">
                         <a class="bloghead" href="https://beyondmebtw.wixsite.com/beyond-btw">Blog</a> &#160;&#160;
                     </div>
-
-                    <div id="link4">
-                        <button class="twitter" onclick="twit()" role="button" aria-label="Name"><i class="bi bi-twitter"></i></button>
-                    </div>
                 </div>
             </div>
             <button class="dropbtn" onclick="but()"><img src="Images/test.jpg" id="imga"></button>
@@ -73,8 +67,9 @@
             challenges of the pandemic. College to me, is an opportunity to <br>
             reinvent myself, explore new things,and embark on exciting adventures.
             <br><br>
-            I love exploring new movies and TV shows, playing the piano, and immersing myself in the<br>
-            beautiful world of Fortnite.I'm a huge fan of sci-fi, crime, thriller,<br>
+            I love watching Movies and TV shows, playing the piano, and playing video games like<br>Fortnite and
+            Valorant
+            .I'm a huge fan of sci-fi, crime, thriller,<br>
             and mystery genres, with drama(obviously).
             <br><br>
             Join me on this exciting journey as I share my thoughts, insights and passions.<br>
@@ -104,8 +99,9 @@
 
     <footer id="footer">
         <p id="f1">Beyondme_BTW</p><br>
-        <p id="f2">&copy2023 by BeyondmeBTW. Proudly created by Pranav Veeraghanta</p>
+        <p id="f2">&copy2023 BeyondmeBTW. Proudly created by Pranav Veeraghanta</p>
     </footer>
 
 </body>
+
 </html>
