--- a/about.html
+++ b/about.html
@@ -17,12 +17,20 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="CSS/about.css">
     <link rel="icon" type="image/x-icon" href="Images/logo.ico">
 
     <script src="JS/Javasc.js" type="text/javascript"></script>
 
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QT901JZ6DD"></script>
 <script>
@@ -58,6 +66,41 @@
 
     <hr id="horli">
     <br>
+    <!-- <div id="contactbutton" onmouseover="aboutbuttson()" onmouseout="aboutbuttsoff()">
+        <i class="bi bi-github cicon githubli"></i>
+        <i class="bi bi-linkedin cicon linkedin"></i>
+        <i class="bi bi-medium cicon medium"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-twitter-x cicon twitterr"
+            viewBox="0 0 16 16">
+            <path
+                d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z" />
+        </svg>
+        <i class="bi bi-envelope-fill cicon email"></i>
+    </div>
+    <div>
+        <div id="email1">
+            <div class="triangle-up"></div>
+            <div id="maillink" value"Beyondmebtw@gmail.com" onmouseover="clipboardcopyover()"
+                onmouseout="clipboardcopyout()">Beyondmebtw@gmail.com</div>
+        </div>
+        <div id="email2">
+            <div class="triangle-left"></div>
+            <div class="clipboard">Copy to clipboard</div>
+            <div class="copiedtoc">Copied</div>
+        </div>
+        <div id="infoaboutbutts">
+            <div class="triangle-left-about github-about"></div>
+            <div class="about-name itsgithub">Github</div>
+            <div class="triangle-left-about linkedin-about"></div>
+            <div class="about-name itslinkedin">Linkedin</div>
+            <div class="triangle-left-about medium-about"></div>
+            <div class="about-name itsmedium">Medium</div>
+            <div class="triangle-left-about twitter-about"></div>
+            <div class="about-name itstwitter">Twitter</div>
+            <div class="triangle-left-about email-about"></div>
+            <div class="about-name itsemail">E-mail ID</div>
+        </div>
+    </div> -->
     <div id="one"></div>
 
     <div id="about">
@@ -74,7 +117,7 @@
             <br><br>
             Join me on this exciting journey as I share my thoughts, insights and passions.<br>
             Let's explore the wonderful world in all its glory!
-        </p><br><br>
+        </p><br><br><br><br>
     </div>
 
     <section class="carou">
@@ -95,6 +138,7 @@
     </section>
 
     <script src="JS/about.js" type="text/javascript"></script>
+    <script src="JS/Javasc.js" type="text/javascript"></script>
     <br><br>
 
     <footer id="footer">
