--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div id="link3">
                         <a class="bloghead" href="https://beyondmebtw.wixsite.com/beyond-btw">Blog</a> &#160;&#160;
-                    </div>                   
+                    </div>
                 </div>
             </div>
             <button class="dropbtn"><img src="Images/test.jpg" id="imga"></button>
@@ -63,7 +63,7 @@
     </header>
 
     <img src="Images/onne.png" id="one" alt="welcome image">
-    <div id="contactbutton">
+    <div id="contactbutton" onmouseover="aboutbuttson()" onmouseout="aboutbuttsoff()">
         <i class="bi bi-github cicon githubli"></i>
         <i class="bi bi-linkedin cicon linkedin"></i>
         <i class="bi bi-medium cicon medium"></i>
@@ -77,12 +77,25 @@
     <div>
         <div id="email1">
             <div class="triangle-up"></div>
-            <div id="maillink" value"Beyondmebtw@gmail.com" onmouseover="clipboardcopyover()" onmouseout="clipboardcopyout()">Beyondmebtw@gmail.com</div>
+            <div id="maillink" value"Beyondmebtw@gmail.com" onmouseover="clipboardcopyover()"
+                onmouseout="clipboardcopyout()">Beyondmebtw@gmail.com</div>
         </div>
         <div id="email2">
             <div class="triangle-left"></div>
             <div class="clipboard">Copy to clipboard</div>
             <div class="copiedtoc">Copied</div>
+        </div>
+        <div id="infoaboutbutts">
+            <div class="triangle-left-about github-about"></div>
+            <div class="about-name itsgithub">Github</div>
+            <div class="triangle-left-about linkedin-about"></div>
+            <div class="about-name itslinkedin">Linkedin</div>
+            <div class="triangle-left-about medium-about"></div>
+            <div class="about-name itsmedium">Medium</div>
+            <div class="triangle-left-about twitter-about"></div>
+            <div class="about-name itstwitter">Twitter</div>
+            <div class="triangle-left-about email-about"></div>
+            <div class="about-name itsemail">E-mail ID</div>
         </div>
     </div>
     <div id="intro2">
