--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    
 
     <link rel="icon" type="image/x-icon" href="Images/logo.ico">
 
@@ -64,15 +64,11 @@
 
     <img src="Images/onne.png" id="one" alt="welcome image">
     <div id="contactbutton" onmouseover="aboutbuttson()" onmouseout="aboutbuttsoff()">
-        <i class="bi bi-github cicon githubli"></i>
-        <i class="bi bi-linkedin cicon linkedin"></i>
-        <i class="bi bi-medium cicon medium"></i>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-twitter-x cicon twitterr"
-            viewBox="0 0 16 16">
-            <path
-                d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865l8.875 11.633Z" />
-        </svg>
-        <i class="bi bi-envelope-fill cicon email"></i>
+        <img src="Images/github.svg" class="bi bi-github cicon githubli">
+        <img src="Images/linkedin.svg" class="bi bi-linkedin cicon linkedin">
+        <img src="Images/medium.svg" class="bi bi-medium cicon medium">
+        <img src="Images/twitter-x.svg" class="bi bi-twitter-x cicon twitterr">            
+        <img src="Images/envelope-fill.svg" class="bi bi-envelope-fill cicon email">
     </div>
     <div>
         <div id="email1">
