--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
 
     <img src="Images/onne.png" id="one" alt="welcome image">
-    <div id="contactbutton" onmouseover="aboutbuttson()" ="aboutbuttsoff()">
+    <div id="contactbutton" onmouseover="aboutbuttson()" onmouseout="aboutbuttsoff()">
         <img src="Images/github.svg" class="bi bi-github cicon githubli">
         <img src="Images/linkedin.svg" class="bi bi-linkedin cicon linkedin">
         <img src="Images/medium.svg" class="bi bi-medium cicon medium">
