--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/about.css">
-    <link rel="icon" type="image/x-icon" href="Images/logo.ico">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 
 
 
