--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     
 
-    <link rel="icon" type="image/x-icon" href="Images/logo.ico">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
