--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/about.css">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
+    <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
 
 
 </head>
