--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
-    
-
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
+    <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
