--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
 
-
+    <meta name="google-site-verification" content="hnAOk2EjIhFY0jDK7k17TitluhR8SkKNsayN4dwkNvQ" />
 </head>
 
 <!-- Google tag (gtag.js) -->
