--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
 
+    <meta name="google-site-verification" content="hnAOk2EjIhFY0jDK7k17TitluhR8SkKNsayN4dwkNvQ" />
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300&family=Rajdhani&display=swap');
     </style>
