--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
 
+    <script>
+        if (window.location.pathname === '/home') {
+            window.location.replace('/index.html');
+        }
+    </script>
+
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/Images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/Images/favicon.ico">
 
@@ -68,7 +74,7 @@
         <img src="Images/github.svg" class="bi bi-github cicon githubli">
         <img src="Images/linkedin.svg" class="bi bi-linkedin cicon linkedin">
         <img src="Images/medium.svg" class="bi bi-medium cicon medium">
-        <img src="Images/twitter-x.svg" class="bi bi-twitter-x cicon twitterr">            
+        <img src="Images/twitter-x.svg" class="bi bi-twitter-x cicon twitterr">
         <img src="Images/envelope-fill.svg" class="bi bi-envelope-fill cicon email">
     </div>
     <div>
