--- a/home/index.html
+++ b/home/index.html
@@ -1,10 +1,12 @@
 <html>
-    <head>
-        <script>
-            function redirect(){
-                window.open("https://beyondmebtw.com/")
-            }
-            onload="redirect()";
-        </script>
-    </head>
+
+<head>
+    <script>
+        window.onload = function () {
+            // similar behavior as clicking on a link
+            window.location.href = "https://beyondmebtw.com/";
+        }
+    </script>
+</head>
+
 </html>
