--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="A personal blog by Pranav Veeraghanta, a college student who is passionate about coding and life.
     I blog about personal experiences and topics like movies, music and video games">
 
-    <title>Home | BeyondMeBTW</title>
+    <title>Home | Wroks</title>
 
     <meta name="beyondmebtw" description="a personal blogging website that contains articles written by pranav veeraghanta on various topics
     such as personal lifestyle and experience and reviews about movies, TV shows, musicals.">
