--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -7,6 +7,10 @@
             width: 500px;
             height: 500px;
         }
+        #butt{
+            width: 200px;
+            height: 200px;
+        }
     </style>
 </head>
 
