--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    
+    <script src="https://unpkg.com/html5-qrcode"></script>
     <style>
         #id {
             border: 2px solid black;
