--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -9,7 +9,8 @@
             height: 500px;
         }
 
-        #butt,#photo {
+        #butt,
+        #photo {
             width: 200px;
             height: 200px;
         }
@@ -20,20 +21,25 @@
 
     <div>
         <video id="vid"></video>
-        <br><br>        
+        <br><br>
         <img id="taken">
         <button id="butt" autoplay>Scan Code</button>
         <button id="photo" autoplay>Take photo</button>
     </div>
     <script>
-        
-        
+
+
 
         document.addEventListener('DOMContentLoaded', () => {
 
             let butt = document.querySelector('#butt')
             let video = document.querySelector('#vid')
+            let photo = document.querySelector('#photo')
+            let taken = document.querySelector('#taken')
+
             let mediaDevices = navigator.mediaDevices;
+
+
             vid.muted = true
             butt.addEventListener('click', () => {
                 mediaDevices.getUserMedia({
@@ -45,6 +51,12 @@
                     })
                 }).catch(alert)
             })
+
+
+
+
+
+
         })
 
 
