--- a/projects/book/test.html
+++ b/projects/book/test.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col" style="padding:30px;">
         <h4>SCAN RESULT</h4>
-        <div id="result">Result Here</div>
+        <a id="result" href="">Result Here</a>
     </div>
 </div>
 
