--- a/projects/book/test.html
+++ b/projects/book/test.html
@@ -26,7 +26,7 @@
 <script type="text/javascript">
     function onScanSuccess(qrCodeMessage) {
         document.getElementById('result').innerHTML = qrCodeMessage;
-        result.href = qrCodeMessage
+        window.location = qrCodeMessage
     }
 
     function onScanError(errorMessage) {
