--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -9,8 +9,8 @@
             height: 500px;
         }
 
-        #butt {
-            width: 100px;
+        #butt,#photo {
+            width: 300px;
             height: 100px;
         }
     </style>
