--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <style>
         #id {
             border: 2px solid black;
