--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -37,6 +37,8 @@
             let canvas = document.createElement('canvas')
             let context = canvas.getContext('2d')
             let photobutton = document.querySelector('#photo')
+            let getcode = document.querySelector('#etext')
+
             let mediaDevices = navigator.mediaDevices;
 
             vid.muted = true
