--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -63,7 +63,10 @@
                 document.body.appendChild(img)
             })
 
-
+            getcode.addEventListener('click',()=>{
+                const imageurl = img.src
+                console.log(imageurl)
+            })
 
         })
 
