--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -59,13 +59,15 @@
                 canvas.height = video.videoHeight;
                 context.drawImage(video, 0, 0, canvas.width, canvas.height)
                 let img = document.createElement('img')
+                img.id = ('qrimage')
                 img.src = canvas.toDataURL()
                 document.body.appendChild(img)
             })
 
             getcode.addEventListener('click',()=>{
-                const imageurl = img.src
-                console.log(imageurl)
+                
+                const imageurl = 
+                console.log()
             })
 
         })
