--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -65,9 +65,9 @@
             })
 
             getcode.addEventListener('click',()=>{
-                
-                const imageurl = 
-                console.log()
+                imageurl = document.querySelector('#qrimage')
+                urls = imageurl.getAttribute('src')
+                console.log(urls)
             })
 
         })
