--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -73,7 +73,7 @@
                 imgg.crossOrigin = 'anonymus'
                 imgg.onload = function(){
                     Quagga.decodeSingle({
-                        src: img.src,
+                        src: imgg.src,
                         numOfWorkers: 0,
                         inputStream: {
                             size: 800
