--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -92,7 +92,7 @@
                         }
                     });
                 };
-                img.src = imageURL;
+                imgg.src = imageURL;
                 
             })
 
