--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -15,6 +15,10 @@
             width: 300px;
             height: 100px;
         }
+
+        #photo{
+            visibility: hidden;
+        }
     </style>
 </head>
 
