--- a/projects/book/index.html
+++ b/projects/book/index.html
@@ -16,7 +16,7 @@
             height: 100px;
         }
 
-        #photo{
+        #photo,#etext{
             visibility: hidden;
         }
     </style>
